# PointCloudCompression

src/: CMakeLists.txt
src/point_pub/: CMakeLists.txt  package.xml
src/point_pub/src/: publisher.cpp
src/point_sub/: CMakeLists.txt  package.xml
src/point_sub/src/: subsrciber.cpp
